Support for South Africa, USA, Britain, Germany and France

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Yomo\\AddressFactory\\": "src"
+            "Yomo\\": "src"
         }
     },
     "autoload-dev": {
