--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": "~7.0",
+        "php": ">=7.0.0",
         "illuminate/support": "~5.1",
         "toin0u/geocoder-laravel": "^4.0"
     },
