--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "illuminate/support": "^6.0.0",
+        "illuminate/support": "~5.1||^6",
         "toin0u/geocoder-laravel": "^4.0"
     },
     "require-dev": {
