--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,8 @@
 {
-    "name": "yomo/addressfactory",
+    "name": "nonsapiens/addressfactory",
     "type": "library",
-    "description": "Creates real-world street addresses from Google Maps, to use in database seeding, unit tests, or anything else. Supports Laravel 5+, and Faker",
+    "description": "Creates real-world street addresses from Google Maps, to use in database seeding, unit tests, or anything else. Supports Laravel 8+, and Faker",
     "keywords": [
-        "Yomo",
         "AddressFactory"
     ],
     "homepage": "https://github.com/nonsapiens/addressfactory",
@@ -17,52 +16,31 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
-        "illuminate/support": "~5.1||^6",
-        "toin0u/geocoder-laravel": "^4.0"
+        "php": ">=7.3.0",
+        "fakerphp/faker": "^1.13",
+        "illuminate/support": "^8.27",
+        "laravel/framework": "^8.0",
+        "toin0u/geocoder-laravel": "^4.4"
     },
     "require-dev": {
-        "phpunit/phpunit" : "~4.0||~5.0||~6.0",
-        "squizlabs/php_codesniffer": "^2.3",
-        "barryvdh/laravel-ide-helper": "^2.3"
     },
     "autoload": {
         "psr-4": {
-            "Yomo\\": "src"
+            "Nonsapiens\\AddressFactory\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Yomo\\AddressFactory\\": "tests"
+            "Nonsapiens\\AddressFactory\\": "tests"
         }
-    },
-    "scripts": {
-        "test": "phpunit",
-        "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
-        "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
-    
-        "post-install-cmd": [
-            "php ../../../artisan clear-compiled",
-            "php ../../../artisan route:scan",
-            "php ../../../artisan event:scan",
-            "php ../../../artisan optimize"
-        ],
-        "post-update-cmd": [
-            "php ../../../artisan clear-compiled",
-            "php ../../../artisan optimize",
-            "php ../../../artisan cache:clear"
-        ],
-        "post-create-project-cmd": [
-            "php ../../../artisan key:generate"
-        ]
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Yomo\\AddressFactory\\AddressFactoryServiceProvider"
+                "Nonsapiens\\AddressFactory\\AddressFactoryServiceProvider"
             ],
             "aliases": {
-                "RealAddress" : "Yomo\\AddressFactory\\Facades\\RealAddress"
+                "AddressFactory" : "Nonsapiens\\AddressFactory\\Facades\\AddressFactory"
             }
         },
         "branch-alias": {
